--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <title>User Authentication</title>
+  <title>UserAuth</title>
 </head>
 
 <body>
